# memvar

./: .gitignore  CMakeLists.txt  Makefile  README.md  is_string.h  memvar.cpp  memvar.h
lib-dev/: CMakeLists.txt
perfTests/: CMakeLists.txt  perfTest.cpp  perfTest.h
src/: CMakeLists.txt  is_string.h  memvar.cpp  memvar.h
src/perfTest/: CMakeLists.txt  perfTest.cpp
src/unitTests/: CMakeLists.txt  bigint.cpp  bigint.h  unitTests.cpp
unitTests/: CMakeLists.txt  bigint.cpp  bigint.h  unitTests.cpp
